--- a/package.json
+++ b/package.json
@@ -2,11 +2,13 @@
   "name": "my-v0-project",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "build": "next build",
-    "dev": "next dev",
+    "dev": "tsc --project tsconfig.server.json && node dist/server.mjs",
+    "dev:watch": "tsc --project tsconfig.server.json --watch & node --watch dist/server.mjs",
+    "build": "next build && tsc --project tsconfig.server.json",
+    "start": "node dist/server.mjs",
     "lint": "next lint",
-    "start": "next start",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
     "db:migrate": "prisma migrate dev",
@@ -66,6 +68,7 @@
     "react-hook-form": "^7.60.0",
     "react-resizable-panels": "^2.1.7",
     "recharts": "2.15.4",
+    "socket.io": "^4.8.1",
     "sonner": "^1.7.4",
     "tailwind-merge": "^2.5.5",
     "tailwindcss-animate": "^1.0.7",
