--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "tsc --project tsconfig.server.json && node dist/server.mjs",
-    "dev:watch": "tsc --project tsconfig.server.json --watch & node --watch dist/server.mjs",
+    "dev": "nodemon",
     "build": "next build && tsc --project tsconfig.server.json",
-    "start": "node dist/server.mjs",
+    "start": "cross-env NODE_ENV=production node dist/server.js",
     "lint": "next lint",
     "db:generate": "prisma generate",
     "db:push": "prisma db push",
@@ -80,6 +79,7 @@
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "nodemon": "^3.1.10",
     "postcss": "^8.5",
     "prisma": "^6.16.3",
     "tailwindcss": "^4.1.9",
