--- a/.github/workflows/notify.yml
+++ b/.github/workflows/notify.yml
@@ -29,7 +29,7 @@ jobs:
             
             ---
             
-            👤 **Committer:** ${{ github.last_name }}
+            👤 **Committer:** ${{ github.actor }}
             
             📝 **Commit Message:**
             _${{ github.event.head_commit.message }}_
